# ros2-cup-stack

./: .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  SETUP_PLAN.md  plot_workspace_xy.py  print_ee_pose.py
docs/: cup_stack_architecture.md  http_websocket_api.md  http_websocket_api_draft.md  (+4 more)
ros2/src/cup_stack/: bringup_real.sh  build_cup_stack.sh  package.xml  setup.cfg  setup.py
ros2/src/cup_stack/config/: moveit_py.yaml
ros2/src/cup_stack/cup_stack/: __init__.py  api_client.py  config.py  geometry.py  onrobot.py  runtime.py  vision.py
ros2/src/cup_stack/cup_stack/nodes/: __init__.py  camera_capture_node.py  cup_pyramid_node.py  cup_pyramid_select_node.py  cup_pyramid_skill_node.py  cup_pyramid_web_node.py  cup_unstack_node.py  cup_unstack_select_node.py  cup_unstack_web_node.py  find_vertical_home_node.py  gripper_node.py  move_cartesian_node.py  move_to_pos1_node.py  scan_skill_node.py  skill_api_node.py
ros2/src/cup_stack/cup_stack/skills/: __init__.py  base.py  config.py  geometry.py  place_cup_skill.py  pyramid_plan.py  pyramid_slot.py  scan_skill.py
ros2/src/cup_stack/cup_stack/tasks/: __init__.py  cup_pyramid.py  cup_unstack.py  scan.py
ros2/src/cup_stack/launch/: camera_capture.launch.py  cup_pyramid.launch.py  cup_pyramid_select.launch.py  cup_pyramid_skill.launch.py  cup_pyramid_web.launch.py  cup_unstack.launch.py  cup_unstack_select.launch.py  cup_unstack_web.launch.py  gripper.launch.py  move_cartesian.launch.py  move_to_pos1.launch.py  scan_skill.launch.py  skill_api.launch.py
ros2/src/cup_stack/resource/: cup_stack
ros2/src/cup_stack/test/: test_flake8.py  test_pep257.py
ros2/src/cup_stack_interfaces/: CMakeLists.txt
(+9 files in other folders)
