<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cup_stack</name>
  <version>0.0.0</version>
  <description>ROS 2 cup stacking tasks split from dsr_practice.</description>
  <maintainer email="ssu@todo.todo">ssu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_py</depend>
  <depend>dsr_msgs2</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>dsr_bringup2</exec_depend>
  <exec_depend>dsr_moveit_config_m0609</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pymodbus</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
